--- a/install_apache.yml
+++ b/install_apache.yml
@@ -2,11 +2,11 @@
 - hosts: all
   become: true
   tasks:
-    - name: Update repository
+    - name: Install Apache2 and PHP (Ubuntu only)
       apt:
-        update_cache: yes
-
-    - name: Install Apache
-      apt:
-        name: apache2
+        name:
+          - apache2
+          - libapache2-mod-php
         state: latest
+        update_cache: yes
+      when: ansible_distribution == "Ubuntu"
